# Generated by Django 5.0.1 on 2026-02-17 03:34

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):
    dependencies = [
        ("interactions", "0001_initial"),
        ("resources", "0002_alter_resourceversion_tags"),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="Notification",
            fields=[
                ("id", models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                (
                    "type",
                    models.CharField(
                        choices=[
                            ("resource_validated", "Resource Validated"),
                            ("resource_forked", "Resource Forked"),
                            ("validation_requested", "Validation Requested"),
                        ],
                        max_length=50,
                        verbose_name="type",
                    ),
                ),
                ("message", models.TextField(help_text="Human-readable notification message", verbose_name="message")),
                (
                    "read_at",
                    models.DateTimeField(
                        blank=True, help_text="Timestamp when notification was read", null=True, verbose_name="read at"
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                (
                    "actor",
                    models.ForeignKey(
                        blank=True,
                        help_text="User who triggered this notification (e.g., who forked the resource)",
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        related_name="triggered_notifications",
                        to=settings.AUTH_USER_MODEL,
                        verbose_name="actor",
                    ),
                ),
                (
                    "resource",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="notifications",
                        to="resources.resource",
                        verbose_name="resource",
                    ),
                ),
                (
                    "user",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="notifications",
                        to=settings.AUTH_USER_MODEL,
                        verbose_name="user",
                    ),
                ),
            ],
            options={
                "verbose_name": "notification",
                "verbose_name_plural": "notifications",
                "db_table": "notifications",
                "ordering": ["-created_at"],
                "indexes": [
                    models.Index(fields=["user", "-created_at"], name="notificatio_user_id_611c58_idx"),
                    models.Index(fields=["user", "read_at"], name="notificatio_user_id_6c7360_idx"),
                ],
            },
        ),
    ]
